<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_whislist"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search"/>


    <item
        android:id="@+id/navigation_journey"
        android:icon="@drawable/journey"
        android:title="@string/title_journey" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_profile"/>

</menu>