<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tourez.view.menu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_whislist"
        android:name="com.example.tourez.view.menu.ui.whislist.WhistlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.tourez.view.menu.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/navigation_journey"
        android:name="com.example.tourez.view.menu.ui.journey.JourneyFragment"
        android:label="@string/title_journey"
        tools:layout="@layout/fragment_journey" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tourez.view.menu.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>