<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_name"
        android:background="@drawable/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="180dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/desc_login"
        android:textColor="#99000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email_layout"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:hint="@string/email">

        <com.example.tourez.view.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password_layout"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_layout">

        <com.example.tourez.view.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#6F12E7"
        android:text="@string/btn_masuk"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_layout"
        app:layout_constraintVertical_bias="0.241"
        tools:ignore="MissingConstraints" />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/tb_forgotPassword"
        android:textColor="#CC0B23FF"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:text="@string/btn_forgot"
        />

    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_forgotPassword"
        app:layout_constraintVertical_bias="0.437">


        <TextView
            android:id="@+id/tv_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unregistered"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tb_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_register"
            android:textAlignment="textStart"
            android:textColor="#CC0B23FF"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>